test/tests/stages/18_structures/invalid_struct_tags/return_type_undeclared.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: exit
        List[1]: 
          TIdentifier: status
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: exit
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
